--- a/FAQs_styles.css
+++ b/FAQs_styles.css
@@ -19,11 +19,11 @@ div.block1{
     padding: 30px 20px 0px 20px;
     text-align: left;
     width: 45%;
-    margin: 10px auto 10px;
+    margin: 10px auto;
 }
 hr {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   border: none;
   height: 2px;
   background-color: lightgray;
