--- a/FAQs_styles.css
+++ b/FAQs_styles.css
@@ -1,6 +1,10 @@
 *{
     font-family: inter, sans-serif;
 }
+body,html{
+    margin: 0;
+    padding: 0;
+}
 .heading{
     font-size: 40px;
     margin-bottom: 0px;
